--- a/GUI/utils/PasswordPrompt.css
+++ b/GUI/utils/PasswordPrompt.css
@@ -7,3 +7,9 @@ QLineEdit {
     background-color: white;
     border: 0px;
 }
+
+QGroupBox {
+    background-color: white;
+    border: 2px solid black;
+    border-radius: 5px;
+}
