--- a/GUI/test/startup.css
+++ b/GUI/test/startup.css
@@ -1,3 +1,11 @@
+QWidget#welcome {
+    background-color: #151515;
+}
+
+QWidget#initial-form {
+    background-color: #151515;
+}
+
 QPushButton {
     color: #FFFFFF;
     background-color: #2fa572;
@@ -12,33 +20,34 @@ QPushButton:hover {
     border: 4px solid white;
 }
 
-QWidget#welcome {
-    background-color: #151515;
-}
-
 QGraphicsView {
     background-color: #151515;
     border: 0px;
 }
 
 QLabel#title {
-    font-size: 32px;
+    font-size: 26px;
     font-weight: bold;
     color: white;
-    border: 4px solid white;
-    border-radius: 5px;
 }
 
 QFrame#line{
-    background-color: rgb(70, 70, 70);
+    background-color: rgb(75, 75, 75);
     margin-right: 80px;
     margin-left: 80px;
     border: 0px;
 }
 
+QFrame#line2{
+    background-color: rgb(75, 75, 75);
+    margin-right: 50px;
+    margin-left: 50px;
+    border: 0px;
+}
+
 
 QLabel#presentation-text {
-    font-size: 16px;
+    font-size: 18px;
     font-style: italic;
     text-align: right;
     color: white;
@@ -49,4 +58,14 @@ QLabel#presentation-text {
 QPushButton#backButton {
     background-color: #797979;
     font-weight: normal;
+}
+
+QPushButton#backButton :hover {
+    background-color: #636363;
+    font-weight: bold;
+    border: none;
+}
+
+QLineEdit {
+    border-radius: 4px;
 }
