FE: work on recovery window

--- a/GUI/MDPStyle/recovery.css
+++ b/GUI/MDPStyle/recovery.css
@@ -24,3 +24,12 @@ QFrame#line{
     margin-left: 80px;
     border: 0px;
 }
+
+QLabel {
+    color: white;
+}
+
+QGroupBox#question-group {
+    border: 2px solid black;
+    border-radius: 5px;
+}
