--- a/GUI/MDPStyle/recovery.css
+++ b/GUI/MDPStyle/recovery.css
@@ -33,3 +33,36 @@ QGroupBox#question-group {
     border: 2px solid black;
     border-radius: 5px;
 }
+
+QPushButton {
+    color: #FFFFFF;
+    background-color: #2fa572;
+    font-size: 20px;
+    font-weight:bold;
+    border: none;
+    border-radius: 5px;
+}
+
+QPushButton:hover {
+    background-color: #2f8c66;
+    border: 4px solid white;
+}
+
+QPushButton#backButton {
+    background-color: #797979;
+    font-weight: normal;
+}
+
+QPushButton#backButton :hover {
+    background-color: #636363;
+    font-weight: bold;
+    border: none;
+}
+
+QLineEdit {
+    border-radius: 4px;
+}
+
+QMessageBox{
+    background-color: #151515;
+}
