`FE`: New refresh support for Jinja templating

--- a/src/main/views/startup.jinja2
+++ b/src/main/views/startup.jinja2
@@ -32,6 +32,12 @@
         <button onclick="submit()">
             Create MDPSaver Account
         </button>
+        <br> <br>
+        {% if nbr_user > 0 %}
+            <button onclick="bridge.callLogin()">
+                Login
+            </button>
+        {% endif %}
     </body>
 </html>
 
